# ai-cpp

./: CMakeLists.txt  README
examples/test/: CMakeLists.txt  main.cc
include/ai/: bim.hh  containers.hh  datasets.hh  dnn.hh  graph.hh  graphics.hh  io.hh  json.hh  la.hh  logic.hh  math.hh  misc.hh  sfml.hh  shell.hh  test.hh
include/ai/bim/: canvas.hh  color.hh  color.hxx  drawer.hh  img.hh  img.hxx
include/ai/containers/: vector.hh  vector.hxx
include/ai/datasets/: mnist.hh  norm4.hh
include/ai/dnn/: activation.hh  cost-function.hh  cost-function.hxx  debug-tensors.hh  debug-tensors.hxx  fully-connected-layer.hh  fully-connected-layer.hxx  fwd.hh  initializer.hh  layer.hh  network.hh  optimizer.hh  sgd-optimizer.hh
include/ai/graph/: dot-tree.hh
include/ai/graphics/: color.hh  gui-lib.hh
include/ai/io/: dir.hh  file.hh  filesystem.hh  path.hh  serial.hh  serial.hxx
include/ai/json/: json-array.hh  json-bool.hh  json-null.hh  json-number.hh  json-object.hh  json-string.hh  json.hh
include/ai/la/: functions.hh  functions.hxx  fwd.hh  mat_dec.hh  matrix.hh  matrix.hxx  random.hh  random.hxx  real-chunk.hh  real-chunk.hxx  shape.hh  shape.hxx  tensor.hh  tensor.hxx  tensor_ops.hh  tensor_ops.hxx  vector.hh  vector.hxx
include/ai/logic/: ast-and.hh  ast-bin.hh  ast-const.hh  ast-iff.hh  ast-implies.hh  ast-not.hh  ast-or.hh  ast-var.hh  ast.hh  cnf.hh  eval-visitor.hh  lexer.hh  model.hh  parser.hh  print-visitor.hh  propositional-kb.hh  symbols-visitor.hh  token.hh  visitor.hh
include/ai/math/: cholesky.hh  cramer.hh  def.hh  gauss.hh  lu.hh  matrix.hh  qr.hh  random.hh  utils.hh  vector.hh  vlist.hh
include/ai/misc/: parse-error.hh  random-mt.hh  random.hh  random.hxx  rect.hh  timer.hxx  xor-shift.hh  xor-shift.hxx
include/ai/sfml/: sf-app.hh  sf-window.hh
include/ai/shell/: arguments.hh  command.hh  date.hh  grid.hh  ipc.hh  shell-canvas.hh  shell-drawable.hh  shell-scene.hh  shell-sprite.hh  shell.hh  timer.hh
include/ai/test/: test-register.hh  test-suite.hh  test-suite.hxx  unit-test.hh  unit-test.hxx
src/: CMakeLists.txt
src/bim/: CMakeLists.txt  canvas.cc  color.cc  drawer.cc  img.cc
src/datasets/: CMakeLists.txt  mnist.cc  norm4.cc
src/dnn/: CMakeLists.txt  activation.cc  fully-connected-layer.cc  network.cc  sgd-optimizer.cc
src/graph/: CMakeLists.txt  dot-tree.cc
src/graphics/: CMakeLists.txt  color.cc  gui-lib.cc
src/io/: CMakeLists.txt  dir.cc  file.cc  filesystem.cc  path.cc
src/json/: CMakeLists.txt  json-array.cc  json-bool.cc  json-null.cc  json-number.cc  json-object.cc  json-string.cc  json.cc
src/la/: CMakeLists.txt  mat_dec.cc  matrix.cc  random.cc  real-chunk.cc  tensor.cc  vector.cc
src/logic/: CMakeLists.txt  ast-and.cc  ast-bin.cc  ast-const.cc  ast-iff.cc  ast-implies.cc  ast-not.cc  ast-or.cc  ast-var.cc  ast.cc  cnf.cc  eval-visitor.cc  lexer.cc  model.cc  parser.cc  print-visitor.cc  propositional-kb.cc  symbols-visitor.cc  token.cc  visitor.cc
src/math/: CMakeLists.txt  cholesky.cc  cramer.cc  gauss.cc  lu.cc  matrix.cc  qr.cc  random.cc  utils.cc  vector.cc  vlist.cc
src/misc/: CMakeLists.txt  parse-error.cc  random-mt.cc  random.cc  rect.hxx  timer.hh
src/sfml/: CMakeLists.txt  sf-app.cc  sf-window.cc
src/shell/: CMakeLists.txt  arguments.cc  command.cc  date.cc  grid.cc  ipc.cc  shell-canvas.cc  shell-drawable.cc  shell-scene.cc  shell-sprite.cc  shell.cc  timer.cc
src/test/: CMakeLists.txt  test-register.cc  test-suite.cc
tests/: CMakeLists.txt  check-matrix.hh  la-types-test.cc  la-types-test.hh  main.cc  mat.oss  tests-test.cc  tests-test.hh
